--- a/huobitrade/src/main/AndroidManifest.xml
+++ b/huobitrade/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest package="com.icer.huobitrade"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-permission android:name="android.permission.VIBRATE"/>
     <application
         android:name=".app.App"
         android:allowBackup="true"
