--- a/huobitrade/src/main/AndroidManifest.xml
+++ b/huobitrade/src/main/AndroidManifest.xml
@@ -11,13 +11,28 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.MainUI">
+        <activity
+            android:name=".ui.SelectSymbolUI"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ui.ApiUI"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".ui.MainUI"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan|stateAlwaysHidden"/>
+        <activity
+            android:name=".ui.AccountUI"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".ui.SettingUI"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
